added tests in Selenide, changed methods